syntax = "proto3";

option go_package = "capstone-2025-30/proto";

import "google/protobuf/empty.proto";
import "test.proto";
import "store.proto";
import "inquiry.proto";

service APIService {
  // test api
  rpc AddTestStruct(AddTestStructRequest) returns (AddTestStructResponse);

  // store api

  rpc CreateStore(CreateStoreRequest) returns (CreateStoreResponse);
  rpc GetStoreList(google.protobuf.Empty) returns (GetStoreListResponse);
  rpc GetStore(GetStoreRequest) returns (GetStoreResponse);
  rpc UpdateStore(UpdateStoreRequest) returns (UpdateStoreResponse);
  rpc DeleteStore(DeleteStoreRequest) returns (DeleteStoreResponse);
  
  // inquiry api
  rpc StreamInquiries(stream InquiryRequest) returns (InquiryResponse);
}